...
extension DataProvider: UITableViewDelegate {
	
	func tableView(_ tableView: UITableView, titleForDeleteConfirmationButtonForRowAt indexPath: IndexPath) -> String? {
		guard let section = Section(rawValue: indexPath.section) else { fatalError() }
		
		switch section {
		case .todo: return "Done"
		case .done: return "Undone"
		}
	}
	
	func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
		guard let section = Section(rawValue: indexPath.section) else { fatalError() }
...
